feat(core): support rollup.config.ts

--- a/packages/rollup/.eslintrc.json
+++ b/packages/rollup/.eslintrc.json
@@ -41,7 +41,8 @@
               "nx",
               "typescript",
               "@swc/core", // Installed to workspace and only used in swc() plugin
-              "postcss"
+              "postcss",
+              "@rollup/plugin-typescript"
             ]
           }
         ]
